# Eidos

./: Cargo.toml  README.md
.cursor/rules/: rule.mdc  specification.md
docs/advanced/: meta-programming.md
docs/spec/: language-spec.md
docs/tools/: cli.md
docs/tutorials/: dsl-guide.md
examples/advanced/: custom_ownership.eid
examples/basic/: hello_world.eid
examples/compiler/: syntax_analysis.eid  type_checker.eid
examples/dsl/: json_builder.eid
examples/language_def/: world_best_language.eid
examples/wasm/: index.html  simple_calculator.eid  wasm_interface.js
src/: main.rs
src/backend/: codegen.rs  llvm.rs  mod.rs  optimizer.rs  wasm.rs
src/core/: ast.rs  eir.rs  error.rs  language_def.rs  mod.rs  symbol.rs  syntax.rs  type_system.rs  types.rs
src/dsl/: extension.rs  mod.rs  processor.rs  registry.rs
src/frontend/: lexer.rs  mod.rs  parser.rs  semantic_analyzer.rs  type_checker.rs
src/memory/: memory_model.rs
src/optimization/: optimizer.rs
src/semantics/: semantics_def.rs
src/stdlib/: collections.rs  io.rs  math.rs  mod.rs  string.rs  system.rs  time.rs
src/tools/: compiler.rs  mod.rs  repl.rs  runner.rs
src/types/: type_system.rs
tests/: integration_tests.rs  mod.rs
tests/unit/: lexer_tests.rs  mod.rs  parser_tests.rs  type_checker_tests.rs
tests/utils/: mod.rs
